# rosetta-connect

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  DEV.md  PULL_COMMAND.md  README.md  STATUS_COMMAND.md  build.sh  guide.md  integration-test.sh  quick-build.sh  rosetta.toml  test-suite.sh  unit-tests.sh  开发文档.md  快速测试脚本.sh  测试指南.md
.claude/: settings.local.json
.rosetta-cache/com.time.JustTime/: pull_cache.json
crates/rc-cli/: Cargo.toml
crates/rc-cli/src/: config.rs  formatter.rs  main.rs
crates/rc-cli/src/commands/: cost.rs  diff.rs  init.rs  mod.rs  preview.rs  pull.rs  push.rs  rollback.rs  status.rs  template.rs  translate.rs  validate.rs
crates/rc-node/: Cargo.toml
crates/rc-node/src/: lib.rs
help-center/: README.md  architecture.md  best-practices.md  commands.md  configuration.md  contributing.md  development.md  getting-started.md  troubleshooting.md
js/: asc.ts  openai-service.ts  package.json  tsconfig.json
test-demo/: rosetta.toml
