[workspace]
members = [
    "crates/rc-cli",
    "crates/rc-node"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
napi = "2.0"
napi-derive = "2.0"
openai-rs = "1.0"
indicatif = "0.17"
anyhow = "1.0"