[package]
name = "rc-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "rosetta-connect"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
rc-node = { path = "../rc-node" }
comfy-table = "7"
owo-colors = "4"
regex = "1.10"

[features]
bundled-node = ["rc-node/bundled-node"]
system-node = ["rc-node/system-node"]